[package]
name = "rs95"
version = "0.1.0"
edition = "2024"
description = "A Rust library implementing the ISA-95 domain models"
readme = "README.md"
keywords = ["isa95", "manufacturing", "erp", "mes"]

[dependencies]
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "uuid/serde"]
